--- a/sub-artmusic.html
+++ b/sub-artmusic.html
@@ -12,7 +12,7 @@
       <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Art_and_Music/paintlikemasbtn.png"></a></div>
       <div class="aclink"><a href="sub-jammin.html" data-transition="slide" id="jammin"><img src="css/images/9-12/Art_and_Music/jazzjambtn.png"></a></div>
       <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Art_and_Music/modernartbtn.png"></a></div>
-      <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Art_and_Music/hiphopbtn.png"></a></div>
+      <div class="aclink"><a href="sub-world-beats.html" data-transition="slide"><img src="css/images/9-12/Art_and_Music/hiphopbtn.png"></a></div>
     </div>
     <div class="botlogoholder"><a href="home.html" class="homelinkbh"><img src="css/images/9-12/bottomhome.png"></a></div>
   </div> <!-- end content -->  
