Ingredients of a song page update

--- a/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-beat.html
+++ b/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-beat.html
@@ -64,6 +64,9 @@
 	</div>
 
   <script>
+  if(window.beat_checked<1){
+		window.beat_checked++;
+	}  
   // sound setup is in home.html and index.js
     sound = new Audio(); // 'sound' is now an audio object
  
