--- a/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords.html
+++ b/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords.html
@@ -106,6 +106,9 @@
 	</div>	
 
   <script>
+  if(window.chords_checked<1){
+		window.chords_checked++;
+	}  
   // sound setup is in home.html and index.js
     sound = new Audio(); // 'sound' is now an audio object
  
