--- a/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-lyrics.html
+++ b/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-lyrics.html
@@ -72,6 +72,9 @@
 	</div>
 
   <script>
+  if(window.lyrics_checked<1){
+		window.lyrics_checked++;
+	}
   // sound setup is in home.html and index.js
     sound = new Audio(); // 'sound' is now an audio object
  
