--- a/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody.html
+++ b/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody.html
@@ -70,6 +70,9 @@
 	</div>
 
   <script>
+  if(window.melody_checked<1){
+		window.melody_checked++;
+	}
   // sound setup is in home.html and index.js
     sound = new Audio(); // 'sound' is now an audio object
  
