--- a/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song.html
+++ b/sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song.html
@@ -21,37 +21,12 @@
 		Do you have all the ingredients to write a song?  Read more about each one! 
 		-->
 	</div>
-		<style>
-		.lyrics-btn{
-			position: absolute;
-			width: 140px;
-			height: 45px;
-			top: 389px;
-			left: 59px;		
-		}
-		.melody-btn{
-			position: absolute;
-			width: 140px;
-			height: 45px;
-			top: 456px;
-			left: 64px;	
-		}
-		.beat-btn{
-			position: absolute;
-			width: 140px;
-			height: 52px;
-			top: 523px;
-			left: 82px;		
-		}
-		.chords-btn{
-			position: absolute;
-			width: 140px;
-			height: 52px;
-			top: 597px;
-			left: 92px;		
-		}
-		
-		</style>
+		<!-- checkbox divs -->
+		<div class="lyrics_checked-bx checkbox-divs"></div>
+		<div class="melody_checked-bx checkbox-divs"></div>
+		<div class="beat_checked-bx checkbox-divs"></div>
+		<div class="chords_checked-bx checkbox-divs"></div>
+		<!-- Checkbox divs ends here  -->
 	
 		<div class="lyrics-btn"></div>
 		<div class="melody-btn"></div>
@@ -152,5 +127,18 @@
 	$('.chords-btn').on('tap',function(){
 		$.mobile.changePage('sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords.html',{transition:"slide"});
 	});	
+	
+	if(window.lyrics_checked > 0){
+		$('.lyrics_checked-bx').show();
+	}
+	if(window.melody_checked > 0){
+		$('.melody_checked-bx').show();
+	}
+	if(window.beat_checked > 0){
+		$('.beat_checked-bx').show();
+	}
+	if(window.chords_checked > 0){
+		$('.chords_checked-bx').show();
+	}	
   </script>
 </div> <!--//home-->
