What do songs do update

--- a/sub-how-to-write-a-song-putting-a-song-together-finding-the-form-and-order.html
+++ b/sub-how-to-write-a-song-putting-a-song-together-finding-the-form-and-order.html
@@ -13,7 +13,7 @@
   <div class="credsbtnholder"><div class="credsbtnHowToWriteASong"></div></div>
   <div class="menubtnholder"><div class="menubtnHowToWriteASong"></div></div>
   
-  <div class="bptitleholder" style="padding-top:14px;"><h1>Choosing a Style</h1></div>
+  <div class="bptitleholder" style="padding-top:14px;"><h1>Finding the Form and Order</h1></div>
   <div id="spacechar">&nbsp;
     <div data-role="content" class="kidzcontent">
       <div class="v-spacer"></div>
@@ -33,9 +33,9 @@
       </div>
       
       <div class="bpcontentHowToWriteASong">
-		<p>Happy songs can sometimes have bright, upbeat music, but they can also be slow and gentle.  Sad songs can also be fast and energetic, or they can be made from minor chords and sound very sorrowful.  Whatever you choose, the style can have a big impact on how the song is interpreted by your listener.</p>
+		<p>Not all songs need to be in Verse-Chorus-Verse-Chorus form.  Some songs have lots of verses, and only a single line for a chorus.  Others have very strong choruses, and dont really have many verses. Some have a two line bridge in the middle. Its up to you to decide whats best for your song!  You could start with a chorus to introduce the song then use the verses to fill in the gaps in the story.  Or you could just write verses and have a little whistling melody for the chorus.</p>
 
-			<p>When you have an idea, think about the style of music that would suit it - fast, slow, energetic, bouncing, sad, quiet, noisy or loud  If you like a particular style of music, like blues or rock, you might like to write in that style.  Or you just might like to see what style the song sounds like in the end.  A style can be changed later  you could even try the same song in different styles to see which you like.  You might like more than one</p>
+			<p>The golden rule is to make sure theres enough repetition to make your song memorable.   The last line of a verse might be the same each time, or the chorus might have a very catchy melody.  If you find you've written a chorus you can't stop singing, you just might have the makings of a really great song!</p>
       </div>
        
       <div class="botlogoholder"><a href="home.html" class="homelinkbh"><img src="css/images/9-12/Art_And_Music/bottomhomeam.png"></a></div>
