--- a/sub-artmusic.html
+++ b/sub-artmusic.html
@@ -11,7 +11,7 @@
       <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Art_and_Music/famouspaintsbtn.png"></a></div><br>
       <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Art_and_Music/paintlikemasbtn.png"></a></div>
       <div class="aclink"><a href="sub-jammin.html" data-transition="slide" id="jammin"><img src="css/images/9-12/Art_and_Music/jazzjambtn.png"></a></div>
-      <div class="aclink"><a href="#" data-transition="slide"><img src="css/images/9-12/Art_and_Music/modernartbtn.png"></a></div>
+      <div class="aclink"><a href="sub-secrets-of-art-drawing.html" data-transition="slide" id="secrets_of_art_drawing"><img src="css/images/9-12/Art_and_Music/modernartbtn.png"></a></div>
       <div class="aclink"><a href="sub-world-beats.html" data-transition="slide" id="world_beats"><img src="css/images/9-12/Art_and_Music/hiphopbtn.png"></a></div>
     </div>
     <div class="botlogoholder"><a href="home.html" class="homelinkbh"><img src="css/images/9-12/bottomhome.png"></a></div>
@@ -47,6 +47,11 @@
 					bgsoundHowToWriteASong.play();
 					artmusicsoundbg.pause();
 					artmusicsoundbg.currentTime = 0;					
+				}
+				else if(subjectId == "secrets_of_art_drawing"){
+					bgsoundSecretsOfArtDrawing.play();
+					artmusicsoundbg.pause();
+					artmusicsoundbg.currentTime = 0;
 				}
 			});
 		});		
