--- a/sub-awesome-art-what-is-art-we-see-what-we-want-to-see-Holbein-The-Ambassadors.html
+++ b/sub-awesome-art-what-is-art-we-see-what-we-want-to-see-Holbein-The-Ambassadors.html
@@ -10,8 +10,16 @@
   <div class="credsbtnholder"><div class="credsbtnAwesomeArt"></div></div>
   <div class="menubtnholder"><div class="menubtnAwesomeArt"></div></div>
   
+  <a id="MagnifyImagelink" style="visibility:hidden;" href="JavaScript:html5Lightbox.showLightbox(0, 'css/images/9-12/Art_and_Music/Awesome_Art/What_Is_Art/We_See_What_We_Want_To_See/Holbiens/Holbeins_image1.png', '');">click here</a>
+  
   <div class="bptitleholder" style="padding-top:14px;"><h1>Holbein's <br />'The Ambassadors'</h1></div>
-  <div id="watchvideolink" style="position:absolute;left: 177px;top: 663px;width: 80px;height: 80px;"></div>
+  <div class="holbein_image1" id="holbeinImage1_bx"></div>
+  <div class="holbein_image2" id="holbeinImage2_bx"></div>
+  <div class="holbein_image3" id="holbeinImage3_bx"></div>
+  <div class="tools_bx"></div>
+  <div class="rotate_btn"></div>
+  <div class="magnify_btn"></div>
+  <div id="watchvideolink" style="position:absolute;left: 195px;top: 620px;width: 80px;height: 80px;z-index:15;"></div>
   <!--<div id="artideaslink" style="position:absolute;left: 547px;top: 215px;width: 100px;height: 283px;"></div> -->
   
   <div data-role="content" class="kidzcontent">
@@ -25,7 +33,7 @@
   </div> <!-- end content -->  
     
   
-  <!--<div class="audiopanel">-->
+    <!--<div class="audiopanel">-->
     <!-- images are in slidebarnat.js 
          note: change the ids to be able play the narration
     -->
@@ -47,6 +55,7 @@
   <!-- ------------------------------------------------------------------ -->
   
   <script>
+	var rotateCounter	=	0;
 	$('#watchHansHolbeinVideo').css({"visibility":"hidden", "z-index":-10});
   // sound setup is in home.html and index.js
     sound = new Audio(); // 'sound' is now an audio object
@@ -61,6 +70,25 @@
     
       $("#sub-awesome-art-what-is-art-we-see-what-we-want-to-see-Holbein-The-Ambassadors").swipe( { swipeRight:goBack, allowPageScroll:"auto"} );
     })();
+	
+	$('.rotate_btn').on('tap', function(){
+		if(rotateCounter	==	0){
+			$('#holbeinImage1_bx').hide();
+			$('#holbeinImage2_bx').show();
+			rotateCounter++;
+		}else if(rotateCounter	==	1){
+			$('#holbeinImage2_bx').hide();
+			$('#holbeinImage3_bx').show();
+			rotateCounter++;
+		}else{
+			$('#holbeinImage3_bx').hide();
+			$('#holbeinImage1_bx').show();
+			rotateCounter=0;
+		}
+	});
+	$('.magnify_btn').on('tap', function() {
+      $('#MagnifyImagelink')[0].click();
+    });
     watchHansHolbein.addEventListener('ended', function() { 
         $("#watchHansHolbeinVideo").css({"visibility":"hidden", "z-index":-1});
         $("#watchHansHolbein").css({"z-index":-1});
