updates in art today

--- a/sub-art-today-involving-the-audience.html
+++ b/sub-art-today-involving-the-audience.html
@@ -11,9 +11,9 @@
   <div class="menubtnholder"><div class="menubtnArtToday"></div></div>
   
   <div class="bptitleholder" style="padding-top:14px;"><h1>Involving the Audience</h1></div>
-  <div id="artandperceptionlink" style="position:absolute;left: 460px;top: 492px;width: 108px;height: 143px;"></div>
-  <div id="performanceartlink" style="position:absolute;left: 105px;top: 490px;width: 103px;height: 148px;"></div>
-  <div id="thesocialturnlink" style="position:absolute;left: 808px;top: 493px;width: 100px;height: 143px;"></div>
+  <div id="artandperceptionlink"></div>
+  <div id="performanceartlink"></div>
+  <div id="thesocialturnlink"></div>
   
   <div data-role="content" class="kidzcontent">
 	<div class="navArtToday-InvolvingTheAudience">
